samples/_failures_safe/1761730088_b50ed1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1429de77.c: In function ‘get_token’:
./samples/SAFE/__tmp_1429de77.c:157:9: error: expected declaration or statement at end of input
  157 |         token->value[1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_1429de77.c:157:9: error: expected declaration or statement at end of input
